--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -29,9 +29,7 @@ jobs:
           pip install -r requirements.txt
 
       # Run tests (if you have test cases)
-      - name: Run Tests
-        run: |
-          pytest  # Replace with your actual test command
+  # Replace with your actual test command
 
       # Log in to Docker Hub
       - name: Log in to Docker Hub
